--- a/csaquiz.html
+++ b/csaquiz.html
@@ -6,8 +6,16 @@
     <title>ServiceNow CSA 100問 練習システム</title>
     <style>
         :root { --primary: #2c3e50; --success: #27ae60; --danger: #e74c3c; --accent: #3498db; --bg: #f0f2f5; }
-        body { font-family: 'Segoe UI', Meiryo, sans-serif; background: var(--bg); margin: 0; display: flex; height: 100vh; overflow: hidden; }
-        
+/* 【修改1】核心布局改为 flex */
+body { 
+            font-family: 'Segoe UI', Meiryo, sans-serif; 
+            background: var(--bg); 
+            margin: 0; 
+            display: flex; 
+            flex-direction: row; /* 横向排列（电脑端） */
+            height: 100vh; 
+            overflow: hidden; 
+        }
         /* サイドバー（問題一覧） */
         #sidebar { width: 300px; background: white; border-right: 1px solid #ddd; display: flex; flex-direction: column; padding: 20px; }
         #sidebar h3 { margin-top: 0; color: var(--primary); font-size: 1.2rem; border-bottom: 2px solid var(--accent); padding-bottom: 10px; }
@@ -38,6 +46,39 @@
         .btn-next { background: var(--accent); color: white; }
         button:disabled { opacity: 0.5; cursor: not-allowed; }
         .legend { margin-top: 20px; font-size: 0.8rem; display: flex; gap: 10px; }
+        /* --- 【修改2】手机端适配媒体查询 --- */
+        @media (max-width: 768px) {
+            body {
+                flex-direction: column; /* 纵向排列 */
+                overflow-y: auto; /* 手机端允许页面整体滚动 */
+                height: auto;
+            }
+
+            #main-content {
+                order: 1; /* 题目显示在第一位 */
+                padding: 20px 10px;
+                overflow-y: visible; /* 禁用内部分层滚动 */
+                height: auto;
+            }
+
+            #sidebar {
+                order: 2; /* 列表显示在第二位（题目下方） */
+                width: 100%;
+                border-right: none;
+                border-top: 1px solid #ddd;
+                padding: 20px;
+                height: auto;
+            }
+
+            .grid-container {
+                grid-template-columns: repeat(8, 1fr); /* 手机端列表按钮多排一点 */
+                max-height: 300px; /* 给下方列表一个最大高度防止过长 */
+            }
+
+            .quiz-card {
+                padding: 20px;
+            }
+        }
     </style>
 </head>
 <body>
